Rest Assured TestNG Framework

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dileep.kumar\AppData\Local\Temp\testng-eclipse-156946281\testng-customsuite.xml</span>
+                    <span>C:\Users\dileep.kumar\AppData\Local\Temp\testng-eclipse--264946850\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,27 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidatecomplexJson" class="method navigator-link" hash-for-method="getCountOfCourses">getCountOfCourses</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidateAddUpdateGetDeleteAPI" class="method navigator-link" hash-for-method="addPlaceUsingJsonFile">addPlaceUsingJsonFile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidatecomplexJson" class="method navigator-link" hash-for-method="getCourseTitleAndPrice">getCourseTitleAndPrice</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidateAddUpdateGetDeleteAPI" class="method navigator-link" hash-for-method="deleteNonExistPlace">deleteNonExistPlace</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidatecomplexJson" class="method navigator-link" hash-for-method="getNumOfCopiesSoldRPA">getNumOfCopiesSoldRPA</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidateAddUpdateGetDeleteAPI" class="method navigator-link" hash-for-method="deleteplace">deleteplace</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidatecomplexJson" class="method navigator-link" hash-for-method="getPurchaseAmount">getPurchaseAmount</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidateAddUpdateGetDeleteAPI" class="method navigator-link" hash-for-method="getUpdatedAddress">getUpdatedAddress</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidatecomplexJson" class="method navigator-link" hash-for-method="getTitleOfFirstCourse">getTitleOfFirstCourse</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="apiTest.ValidateAddUpdateGetDeleteAPI" class="method navigator-link" hash-for-method="updatePlaceApi">updatePlaceApi</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +142,42 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">apiTest.ValidatecomplexJson</span>
+              <span class="class-name">apiTest.ValidateAddUpdateGetDeleteAPI</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getCountOfCourses">
-                  </a> <!-- getCountOfCourses -->
-                  <span class="method-name">getCountOfCourses</span>
+                  <a name="addPlaceUsingJsonFile">
+                  </a> <!-- addPlaceUsingJsonFile -->
+                  <span class="method-name">addPlaceUsingJsonFile</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getCourseTitleAndPrice">
-                  </a> <!-- getCourseTitleAndPrice -->
-                  <span class="method-name">getCourseTitleAndPrice</span>
+                  <a name="deleteNonExistPlace">
+                  </a> <!-- deleteNonExistPlace -->
+                  <span class="method-name">deleteNonExistPlace</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getNumOfCopiesSoldRPA">
-                  </a> <!-- getNumOfCopiesSoldRPA -->
-                  <span class="method-name">getNumOfCopiesSoldRPA</span>
+                  <a name="deleteplace">
+                  </a> <!-- deleteplace -->
+                  <span class="method-name">deleteplace</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getPurchaseAmount">
-                  </a> <!-- getPurchaseAmount -->
-                  <span class="method-name">getPurchaseAmount</span>
+                  <a name="getUpdatedAddress">
+                  </a> <!-- getUpdatedAddress -->
+                  <span class="method-name">getUpdatedAddress</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getTitleOfFirstCourse">
-                  </a> <!-- getTitleOfFirstCourse -->
-                  <span class="method-name">getTitleOfFirstCourse</span>
+                  <a name="updatePlaceApi">
+                  </a> <!-- updatePlaceApi -->
+                  <span class="method-name">updatePlaceApi</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dileep.kumar\AppData\Local\Temp\testng-eclipse-156946281\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dileep.kumar\AppData\Local\Temp\testng-eclipse--264946850\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +194,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;apiTest.ValidatecomplexJson&quot;/&gt;
+      &lt;class name=&quot;apiTest.ValidateAddUpdateGetDeleteAPI&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -218,6 +218,30 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">parallel</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">addPlaceUsingJsonFile</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">deleteNonExistPlace</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">deleteplace</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">getUpdatedAddress</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">updatePlaceApi</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -236,30 +260,30 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getCountOfCourses')
-data.setCell(0, 2, 'apiTest.ValidatecomplexJson')
-data.setCell(0, 3, 2430);
+data.setCell(0, 1, 'addPlaceUsingJsonFile')
+data.setCell(0, 2, 'apiTest.ValidateAddUpdateGetDeleteAPI')
+data.setCell(0, 3, 3648);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getCourseTitleAndPrice')
-data.setCell(1, 2, 'apiTest.ValidatecomplexJson')
-data.setCell(1, 3, 130);
+data.setCell(1, 1, 'updatePlaceApi')
+data.setCell(1, 2, 'apiTest.ValidateAddUpdateGetDeleteAPI')
+data.setCell(1, 3, 2574);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'getTitleOfFirstCourse')
-data.setCell(2, 2, 'apiTest.ValidatecomplexJson')
-data.setCell(2, 3, 81);
+data.setCell(2, 1, 'deleteplace')
+data.setCell(2, 2, 'apiTest.ValidateAddUpdateGetDeleteAPI')
+data.setCell(2, 3, 2567);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'getNumOfCopiesSoldRPA')
-data.setCell(3, 2, 'apiTest.ValidatecomplexJson')
-data.setCell(3, 3, 54);
+data.setCell(3, 1, 'deleteNonExistPlace')
+data.setCell(3, 2, 'apiTest.ValidateAddUpdateGetDeleteAPI')
+data.setCell(3, 3, 2548);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'getPurchaseAmount')
-data.setCell(4, 2, 'apiTest.ValidatecomplexJson')
-data.setCell(4, 3, 27);
+data.setCell(4, 1, 'getUpdatedAddress')
+data.setCell(4, 2, 'apiTest.ValidateAddUpdateGetDeleteAPI')
+data.setCell(4, 3, 2188);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,26 +309,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">apiTest.ValidatecomplexJson</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">apiTest.ValidateAddUpdateGetDeleteAPI</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getCountOfCourses</span>
+                <span class="method-name">addPlaceUsingJsonFile</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getPurchaseAmount</span>
-                <span class="method-start">2439 ms</span>
+                <span class="method-name">updatePlaceApi</span>
+                <span class="method-start">3652 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getTitleOfFirstCourse</span>
-                <span class="method-start">2469 ms</span>
+                <span class="method-name">getUpdatedAddress</span>
+                <span class="method-start">6227 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getCourseTitleAndPrice</span>
-                <span class="method-start">2552 ms</span>
+                <span class="method-name">deleteplace</span>
+                <span class="method-start">8416 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getNumOfCopiesSoldRPA</span>
-                <span class="method-start">2684 ms</span>
+                <span class="method-name">deleteNonExistPlace</span>
+                <span class="method-start">10985 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
