--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>parallel</td><td>ValidateAddUpdateGetDeleteAPI.updatePlaceApi()[pri:2, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]<br/>ValidateAddUpdateGetDeleteAPI.addPlaceUsingJsonFile()[pri:1, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]<br/>ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]<br/>ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]<br/>ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]<br/></td></tr>
+</table>
