--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -27,6 +27,54 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>apiTest.ValidatecomplexJson</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getPurchaseAmount</td>
+<td>complex </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getTitleOfFirstCourse</td>
+<td>complex </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getNumOfCopiesSoldRPA</td>
+<td>complex </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getCourseTitleAndPrice</td>
+<td>complex </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>sumOfAllCoursePriceWithPurchseAmount</td>
+<td>complex </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getCountOfCourses</td>
+<td>complex </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>apiTest.ValidateAddUpdateGetDeleteAPI</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -109,7 +157,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddAPIUsingExcelFile</td>
+<td>verifyAddAPIUsingHashMap</td>
+<td>hashmap </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAddAPIUsingExcel</td>
 <td>excel </td>
 </tr>
 <tr>
