--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,31 +4,36 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>apiTest.ValidatecomplexJson</td>
+<td>apiTest.ValidateAddUpdateGetDeleteAPI</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getPurchaseAmount</td>
-<td>&nbsp;</td></tr>
+<td>deleteplace</td>
+<td>parallel </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>getTitleOfFirstCourse</td>
-<td>&nbsp;</td></tr>
+<td>updatePlaceApi</td>
+<td>parallel </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>getNumOfCopiesSoldRPA</td>
-<td>&nbsp;</td></tr>
+<td>deleteNonExistPlace</td>
+<td>parallel </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCourseTitleAndPrice</td>
-<td>&nbsp;</td></tr>
+<td>addPlaceUsingJsonFile</td>
+<td>parallel </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>getCountOfCourses</td>
-<td>&nbsp;</td></tr>
+<td>getUpdatedAddress</td>
+<td>parallel </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
