--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>21/06/01 12:53:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getCountOfCourses()[pri:1, instance:apiTest.ValidatecomplexJson@52102734]">getCountOfCourses</td> 
-  <td>main@1473771722</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 12:53:22</td>   <td>2554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getCourseTitleAndPrice()[pri:4, instance:apiTest.ValidatecomplexJson@52102734]">getCourseTitleAndPrice</td> 
-  <td>main@1473771722</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 12:53:23</td>   <td>2686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getNumOfCopiesSoldRPA()[pri:5, instance:apiTest.ValidatecomplexJson@52102734]">getNumOfCopiesSoldRPA</td> 
-  <td>main@1473771722</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 12:53:22</td>   <td>2441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getPurchaseAmount()[pri:2, instance:apiTest.ValidatecomplexJson@52102734]">getPurchaseAmount</td> 
-  <td>main@1473771722</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/01 12:53:22</td>   <td>2470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getTitleOfFirstCourse()[pri:3, instance:apiTest.ValidatecomplexJson@52102734]">getTitleOfFirstCourse</td> 
-  <td>main@1473771722</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/01 16:14:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.addPlaceUsingJsonFile()[pri:1, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">addPlaceUsingJsonFile</td> 
+  <td>main@647149086</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/01 16:15:09</td>   <td>10986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">deleteNonExistPlace</td> 
+  <td>main@647149086</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/01 16:15:07</td>   <td>8417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">deleteplace</td> 
+  <td>main@647149086</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/01 16:15:05</td>   <td>6228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">getUpdatedAddress</td> 
+  <td>main@647149086</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/01 16:15:02</td>   <td>3653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.updatePlaceApi()[pri:2, instance:apiTest.ValidateAddUpdateGetDeleteAPI@55b5f5d2]">updatePlaceApi</td> 
+  <td>main@647149086</td>   <td></td> </tr>
 </table>
