--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,6 +1,8 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>excel</td><td>ValidateAddApiUsingExcel.verifyAddAPIUsingExcelFile()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@1c25b8a7]<br/></td></tr>
-<tr><td>sanity</td><td>ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]<br/></td></tr>
-<tr><td>single</td><td>ValidateAddApiUsingTextFile.verifyAddAPIUsingTextFile()[pri:0, instance:apiTest.ValidateAddApiUsingTextFile@200606de]<br/></td></tr>
-<tr><td>smoke</td><td>ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]<br/>ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>complex</td><td>ValidatecomplexJson.getTitleOfFirstCourse()[pri:3, instance:apiTest.ValidatecomplexJson@7957dc72]<br/>ValidatecomplexJson.getCourseTitleAndPrice()[pri:4, instance:apiTest.ValidatecomplexJson@7957dc72]<br/>ValidatecomplexJson.getNumOfCopiesSoldRPA()[pri:5, instance:apiTest.ValidatecomplexJson@7957dc72]<br/>ValidatecomplexJson.sumOfAllCoursePriceWithPurchseAmount()[pri:6, instance:apiTest.ValidatecomplexJson@7957dc72]<br/>ValidatecomplexJson.getPurchaseAmount()[pri:2, instance:apiTest.ValidatecomplexJson@7957dc72]<br/>ValidatecomplexJson.getCountOfCourses()[pri:1, instance:apiTest.ValidatecomplexJson@7957dc72]<br/></td></tr>
+<tr><td>excel</td><td>ValidateAddApiUsingExcel.verifyAddAPIUsingExcel()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@7544a1e4]<br/></td></tr>
+<tr><td>hashmap</td><td>ValidateAddApiUsingExcel.verifyAddAPIUsingHashMap()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@7544a1e4]<br/></td></tr>
+<tr><td>sanity</td><td>ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]<br/></td></tr>
+<tr><td>single</td><td>ValidateAddApiUsingTextFile.verifyAddAPIUsingTextFile()[pri:0, instance:apiTest.ValidateAddApiUsingTextFile@70e0accd]<br/></td></tr>
+<tr><td>smoke</td><td>ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]<br/>ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]<br/></td></tr>
 </table>
