--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95e367">  <td>21/05/31 16:15:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.addplacePayload()[pri:1, instance:apiTest.GoogleLocationPayload@4362d7df]">addplacePayload</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="95e367">  <td>21/05/31 16:15:30</td>   <td>2392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.validateAddplaceResponse()[pri:2, instance:apiTest.GoogleLocationPayload@4362d7df]">validateAddplaceResponse</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="95e367">  <td>21/05/31 16:15:31</td>   <td>2876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.verifyGetplaceWithValidPlaceID()[pri:3, instance:apiTest.GoogleLocationPayload@4362d7df]">verifyGetplaceWithValidPlaceID</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="95e367">  <td>21/05/31 16:15:34</td>   <td>5907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.verifyGetplaceWithInvalidPlaceID()[pri:4, instance:apiTest.GoogleLocationPayload@4362d7df]">verifyGetplaceWithInvalidPlaceID</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="9793c7">  <td>21/05/31 16:15:36</td>   <td>8002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.addPlaceUsingJsonFile()[pri:1, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]">addPlaceUsingJsonFile</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="9793c7">  <td>21/05/31 16:15:36</td>   <td>8625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.updatePlaceApi()[pri:2, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]">updatePlaceApi</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="9793c7">  <td>21/05/31 16:15:39</td>   <td>11165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]">getUpdatedAddress</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="9793c7">  <td>21/05/31 16:15:41</td>   <td>13397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]">deleteplace</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="9793c7">  <td>21/05/31 16:15:44</td>   <td>15845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@66238be2]">deleteNonExistPlace</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="b3b079">  <td>21/05/31 16:15:46</td>   <td>18354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddApiUsingExcel.verifyAddAPIUsingExcelFile()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@1c25b8a7]">verifyAddAPIUsingExcelFile</td> 
-  <td>main@681747431</td>   <td></td> </tr>
-<tr bgcolor="7aed93">  <td>21/05/31 16:15:46</td>   <td>18358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddApiUsingTextFile.verifyAddAPIUsingTextFile()[pri:0, instance:apiTest.ValidateAddApiUsingTextFile@200606de]">verifyAddAPIUsingTextFile</td> 
-  <td>main@681747431</td>   <td></td> </tr>
+<tr bgcolor="95e367">  <td>21/06/01 14:32:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.addplacePayload()[pri:1, instance:apiTest.GoogleLocationPayload@63fd4873]">addplacePayload</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="95e367">  <td>21/06/01 14:32:07</td>   <td>4583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.validateAddplaceResponse()[pri:2, instance:apiTest.GoogleLocationPayload@63fd4873]">validateAddplaceResponse</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="95e367">  <td>21/06/01 14:32:08</td>   <td>5143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.verifyGetplaceWithValidPlaceID()[pri:3, instance:apiTest.GoogleLocationPayload@63fd4873]">verifyGetplaceWithValidPlaceID</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="95e367">  <td>21/06/01 14:32:11</td>   <td>8042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GoogleLocationPayload.verifyGetplaceWithInvalidPlaceID()[pri:4, instance:apiTest.GoogleLocationPayload@63fd4873]">verifyGetplaceWithInvalidPlaceID</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="9793c7">  <td>21/06/01 14:32:13</td>   <td>10230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.addPlaceUsingJsonFile()[pri:1, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]">addPlaceUsingJsonFile</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="9793c7">  <td>21/06/01 14:32:14</td>   <td>10845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.updatePlaceApi()[pri:2, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]">updatePlaceApi</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="9793c7">  <td>21/06/01 14:32:17</td>   <td>13708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.getUpdatedAddress()[pri:3, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]">getUpdatedAddress</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="9793c7">  <td>21/06/01 14:32:19</td>   <td>16009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteplace()[pri:4, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]">deleteplace</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="9793c7">  <td>21/06/01 14:32:22</td>   <td>19165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddUpdateGetDeleteAPI.deleteNonExistPlace()[pri:5, instance:apiTest.ValidateAddUpdateGetDeleteAPI@1e11bc55]">deleteNonExistPlace</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="b3b079">  <td>21/06/01 14:32:25</td>   <td>21706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddApiUsingExcel.verifyAddAPIUsingExcel()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@7544a1e4]">verifyAddAPIUsingExcel</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="b3b079">  <td>21/06/01 14:32:26</td>   <td>22767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddApiUsingExcel.verifyAddAPIUsingHashMap()[pri:0, instance:apiTest.ValidateAddApiUsingExcel@7544a1e4]">verifyAddAPIUsingHashMap</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="7aed93">  <td>21/06/01 14:32:26</td>   <td>23608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddApiUsingTextFile.verifyAddAPIUsingTextFile()[pri:0, instance:apiTest.ValidateAddApiUsingTextFile@70e0accd]">verifyAddAPIUsingTextFile</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getCountOfCourses()[pri:1, instance:apiTest.ValidatecomplexJson@7957dc72]">getCountOfCourses</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getPurchaseAmount()[pri:2, instance:apiTest.ValidatecomplexJson@7957dc72]">getPurchaseAmount</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getTitleOfFirstCourse()[pri:3, instance:apiTest.ValidatecomplexJson@7957dc72]">getTitleOfFirstCourse</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getCourseTitleAndPrice()[pri:4, instance:apiTest.ValidatecomplexJson@7957dc72]">getCourseTitleAndPrice</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.getNumOfCopiesSoldRPA()[pri:5, instance:apiTest.ValidatecomplexJson@7957dc72]">getNumOfCopiesSoldRPA</td> 
+  <td>main@985487390</td>   <td></td> </tr>
+<tr bgcolor="d6fd6a">  <td>21/06/01 14:32:27</td>   <td>24290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidatecomplexJson.sumOfAllCoursePriceWithPurchseAmount()[pri:6, instance:apiTest.ValidatecomplexJson@7957dc72]">sumOfAllCoursePriceWithPurchseAmount</td> 
+  <td>main@985487390</td>   <td></td> </tr>
 </table>
