--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterClass()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterMethod()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>42</td> <td title="&lt;&lt;SampleTest.afterSuite()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;SampleTest.afterTest()[pri:0, instance:apiTest.SampleTest@64dafeed]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeClass()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeMethod()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-28</td> <td title="&gt;&gt;SampleTest.beforeSuite()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-24</td> <td>&nbsp;</td><td title="&gt;&gt;SampleTest.beforeTest()[pri:0, instance:apiTest.SampleTest@64dafeed]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@870322840</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/06/02 19:22:14</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.testCase()[pri:0, instance:apiTest.SampleTest@64dafeed]">testCase</td> 
-  <td>main@870322840</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/06/03 12:11:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTest.trytest()[pri:2, instance:apiTest.SampleTest@27953a83]">trytest</td> 
+  <td>main@307411297</td>   <td></td> </tr>
 </table>
